AOS added on selected sections

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -59,11 +59,13 @@
 
             <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5">
-                    <div class="icon">
+                    <div class="icon" data-aos="zoom-out">
                         <i class="bi bi-coin"></i>
                     </div>
-                    <h3 class="py-4">Tailored Investment Plans</h3>
-                    <p>
+                    <h3 class="py-4" data-aos="fade-up">
+                        Tailored Investment Plans
+                    </h3>
+                    <p data-aos="fade-up" data-aos-delay="100">
                     We offer customized investment solutions to fit your unique financial goals. 
                     Starting or a seasoned investor, 
                     we’ve got a plan for you.
@@ -73,11 +75,13 @@
 
             <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5 h-100">
-                    <div class="icon">
+                    <div class="icon" data-aos="zoom-out">
                         <i class="bi bi-check-all"></i>
                     </div>
-                    <h3 class="py-4">Consistent and Reliable Returns</h3>
-                    <p>
+                    <h3 class="py-4" data-aos="fade-up">
+                        Consistent and Reliable Returns
+                    </h3>
+                    <p data-aos="fade-up" data-aos-delay="100">
                         With a proven track record of delivering steady profits, 
                         we help you grow your wealth confidently and securely.
                     </p>
@@ -86,11 +90,13 @@
 
             <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5 h-100">
-                    <div class="icon">
+                    <div class="icon" data-aos="zoom-out">
                         <i class="bi bi-headset"></i>
                     </div>
-                    <h3 class="py-4">Expert Support Team</h3>
-                    <p>
+                    <h3 class="py-4" data-aos="fade-up">
+                        Expert Support Team
+                    </h3>
+                    <p data-aos="fade-up" data-aos-delay="100">
                         Our team of financial experts is here to guide you at every step, 
                         offering real-time assistance whenever you need it.
                     </p>
@@ -99,11 +105,13 @@
 
             <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5 h-100">
-                    <div class="icon">
+                    <div class="icon" data-aos="zoom-out">
                         <i class="bi bi-fingerprint"></i>
                     </div>
-                    <h3 class="py-4">Top-Level Security</h3>
-                    <p>
+                    <h3 class="py-4" data-aos="fade-up">
+                        Top-Level Security
+                    </h3>
+                    <p data-aos="fade-up" data-aos-delay="100">
                         Your investments are protected with state-of-the-art security protocols, 
                         ensuring your data and funds are always safe.
                     </p>
@@ -112,11 +120,13 @@
 
             <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5">
-                    <div class="icon">
+                    <div class="icon" data-aos="zoom-out">
                         <i class="bi bi-graph-up-arrow"></i>
                     </div>
-                    <h3 class="py-4">Growth-Driven Technology</h3>
-                    <p>
+                    <h3 class="py-4" data-aos="fade-up">
+                        Growth-Driven Technology
+                    </h3>
+                    <p data-aos="fade-up" data-aos-delay="100">
                         We use cutting-edge analytics and tools to maximize your investment potential 
                         while managing risks effectively.
                     </p>
@@ -224,7 +234,7 @@
             <!-- === SILVER AND GOLD column  === -->
             <article class="col-12 col-lg-4">
                 <a href="#" class="plans p-5 shadow rounded-5" id="silver_gold">
-                    <div class="plan-details">
+                    <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Silver and Gold</h2>
                         <h3 class="h1 pricing">
                             <small>from</small>
@@ -260,7 +270,7 @@
             <!-- === OIL AND GAS column  === -->
             <article class="col-12 col-lg-4">
                 <a href="#" class="plans p-5 shadow rounded-5" id="oil-gas">
-                    <div class="plan-details">
+                    <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Oil and Gas</h2>
                         <h3 class="h1 pricing">
                             <small>from</small>
@@ -296,7 +306,7 @@
             <!-- === REAL ESTATE column  === -->
             <article class="col-12  col-lg-4">
                 <a href="#" class="plans p-5 shadow rounded-5" id="realestates">
-                    <div class="plan-details">
+                    <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Real Estates</h2>
                         <h3 class="h1 pricing">
                             <small>from</small>
