AOS added on the about page

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -8,8 +8,8 @@
     <div class="container">
         <section class="row">
             <article class="col-12 col-lg-8 offset-lg-2 mx-auto text-center">
-                <h1>About Us</h1>
-                <p class="text-white">
+                <h1 data-aos="fade-down">About Us</h1>
+                <p class="text-white" data-aos="fade-up">
                     RiazVest - Empowering Your Financial Growth Through Smart Investments.
                 </p>
             </article>
@@ -111,7 +111,7 @@
 
             <article class="col-12 col-md-6">
                 <div class="px-md-4">
-                    <div class="border border-success p-4 bg-white">
+                    <div class="border border-success p-4 bg-white" data-aos="zoom-in">
                         <h3>Our Mission</h3>
                         <p>
                             Our mission is simple: To offer easy-to-use, 
@@ -120,7 +120,7 @@
                         </p>
                     </div>
 
-                    <div class="border border-success p-4 my-4 bg-white">
+                    <div class="border border-success p-4 my-4 bg-white" data-aos="zoom-in">
                         <h3>Our Vision</h3>
                         <p>
                             To become the most trusted investment platform globally, enabling investors to confidently 
