--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -14,7 +14,12 @@
 
             <section class="row gy-4">
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <a class="d-flex summary shadow-sm">
+                    <a 
+                        class="
+                            d-flex summary shadow-sm
+                            animate__animated animate__bounce
+                        "
+                    >
                         <i class="bi bi-graph-up-arrow"></i>
                         <div class="ps-4">
                             <p>Total Investment</p>
@@ -23,7 +28,12 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <a href="" class="d-flex summary shadow-sm">
+                    <a 
+                        href="" 
+                        class="
+                            d-flex summary shadow-sm
+                            animate__animated animate__bounce animate__delay-2s
+                        ">
                         <i class="bi bi-briefcase"></i>
                         <div class="ps-4">
                             <p>Investment Amount</p>
@@ -32,7 +42,12 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="d-flex summary shadow-sm">
+                    <a 
+                        href="#" 
+                        class="
+                            d-flex summary shadow-sm
+                            animate__animated animate__bounce animate__delay-3s
+                        ">
                         <i class="bi bi-coin"></i>
                         <div class="ps-4">
                             <p>Profits Balance</p>
@@ -42,7 +57,12 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="d-flex summary shadow-sm">
+                    <a 
+                        href="#" 
+                        class="
+                            d-flex summary shadow-sm
+                            animate__animated animate__fadeInUp
+                        ">
                         <i class="bi bi-people"></i>
                         <div class="ps-4">
                             <p>Total Referrals</p>
@@ -52,7 +72,12 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="d-flex summary shadow-sm">
+                    <a 
+                        href="#" 
+                        class="
+                            d-flex summary shadow-sm
+                            animate__animated animate__fadeInUp animate__delay-2s
+                        ">
                         <i class="bi bi-currency-bitcoin"></i>
                         <div class="ps-4">
                             <p>Referrals Earnings</p>
@@ -62,7 +87,12 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="d-flex summary shadow-sm">
+                    <a 
+                        href="#" 
+                        class="
+                            d-flex summary shadow-sm
+                            animate__animated animate__fadeInUp animate__delay-3s
+                        ">
                         <i class="bi bi-wallet2"></i>
                         <div class="ps-4">
                             <p>Withdrawals Requests</p>
