Animate css setup using cdn

--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -34,6 +34,12 @@
     <!-- swiss alert box custom -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+    <!-- Animate CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <style>
       em.is-invalid {
         color: #dc3545;
