--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -9,8 +9,8 @@
     <div class="container py-5">
         <section class="row g-5">
             <article class="col-12 col-lg-8 offset-lg-2 mx-auto text-center">
-                <h1>Contact Us</h1>
-                <p class="text-white">
+                <h1 data-aos="fade-down">Contact Us</h1>
+                <p class="text-white" data-aos="fade-up">
                     We’re here to assist you with any questions, concerns, or feedback you may have. 
                     Whether you need more information about our investment plans or require support, our team is ready to help. 
                     Reach out through any of the methods below..
@@ -88,7 +88,7 @@
             </article>
             
             <article class="col-12 col-md-7 right">
-                <form action="" method="post">
+                <form action="" method="post" data-aos="zoom-in">
                     {% crispy form %}
                 </form>
             </article>
