--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -40,6 +40,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
+    <!-- AOS CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <style>
       em.is-invalid {
         color: #dc3545;
@@ -415,6 +418,17 @@ function toggleInvestmentStatus(investmentId, action, confirmButton) {
         }
       });
   });
+  </script>
+
+  <!-- AOS Animations -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+      /**** javascript code for aos file ****/
+      AOS.init({
+          delay: 0,
+          duration: 800,
+          easing: 'ease-in-sine',
+      });
   </script>
 
 </body>
