Adjusted and added animates

--- a/users/templates/users/investments_tab.html
+++ b/users/templates/users/investments_tab.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 {% endfor %}
-                <!-- End Pricing Item -->
+                <!--== End Pricing Item ==-->
             </article>
         </section>
     </div>
