--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -18,7 +18,7 @@
                 </form>
                 {% else %}
                 <h5 class="alert alert-info">
-                    <span>Update payments wallets to Display Form.</span>
+                    <span>Please update your payments wallets to Display Form.</span>
                 </h5>
                 {% endif %}
             </div>
@@ -50,31 +50,34 @@
                                 <p>{{total_profits}}</p>
                             </td>
                         </tr>
+                    </table>
 
+                    <table>
                         <tr>
                             <td>
                                 Ethereum Address
+                                <p class="fw-bolder text-end">
+                                    {{user.profiles.ethereum_wallet}}
+                                </p>
                             </td>
-                            <td class="fw-bolder text-end">
-                                {{user.profiles.ethereum_wallet}}
-                            </td>
+                            
                         </tr>
 
                         <tr>
                             <td>
                                 Bitcoin Address
-                            </td>
-                            <td class="fw-bolder text-end">
-                                {{user.profiles.bitcoin_wallet}}
+                                <p class="fw-bolder text-end">
+                                    {{user.profiles.bitcoin_wallet}}
+                                </p>
                             </td>
                         </tr>
 
                         <tr>
                             <td>
                                 USDT Address
-                            </td>
-                            <td class="fw-bolder text-end">
-                                {{user.profiles.usdt_wallet}}
+                                <p class="fw-bolder text-end">
+                                    {{user.profiles.usdt_wallet}}
+                                </p>
                             </td>
                         </tr>
                     </table>
