dollars sign added to the withdrawal section

--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -38,7 +38,7 @@
                                 Available balance
                             </td>
                             <td class="fw-bolder text-end">
-                                <p>{{total_profits}}</p>
+                                <p>${{total_profits}}</p>
                             </td>
                         </tr>
 
@@ -47,7 +47,7 @@
                                 Withdrawable balance
                             </td>
                             <td class="fw-bolder text-end">
-                                <p>{{total_profits}}</p>
+                                <p>${{total_profits}}</p>
                             </td>
                         </tr>
                     </table>
