--- a/staticfiles/admin_portal/css/admin_portal.css
+++ b/staticfiles/admin_portal/css/admin_portal.css
@@ -16,8 +16,7 @@
 } */
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
-    background: #32CD32;
-    /* background: #228B22; */
+    background: var(--primary-color-one);
     font-weight: bolder;
     transition: .4s;
 }
@@ -25,7 +24,7 @@
 .nav-pills .nav-link{
     font-weight: bolder;
     /* color: var(--secondary-color); */
-    color: #D9D9D9;
+    color: #353535;
     transition: .4s;
 }
 
@@ -34,14 +33,14 @@
 }
 
 .nav-pills .nav-link:hover{
-    color: var(--secondary-color);
+    color: #003366;
 }
 
 .nav-pills .nav-link.active .bi{
     color: #FFF;
 }
 .nav-pills .nav-link .bi{
-    color: #F0F0F0;
+    color: var(--primary-color-one);
     font-weight: bolder;
     font-size: 1.2em;
 }
@@ -57,14 +56,14 @@
     overflow: auto;
 }
 
-#content-dashboard .summary{
+ .summary{
     background-color: #FFF;
     padding: 10px 10px;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--primary-color);
 }
 
-#content-dashboard .summary .bi{
-    /* color: #32CD32; */
+ .summary .bi{
+    color: var(--primary-color);
     font-size: 1.7rem;
 }
 
@@ -83,7 +82,7 @@
 }
 
 #referral .bi{
-    color: #32CD32;
+    color: #003366;
     font-size: 1.7rem;
 }
 
@@ -112,7 +111,7 @@
 /*** side closer ***/
 .toggler{
     text-align: center;
-    background: #003366 !important;
+    background: var(--primary-color) !important;
 }
 
 .toggler .bi{
@@ -131,6 +130,11 @@
 
 .sidebar-body {
     padding: 0 15px;
+}
+
+
+.floating_textarea_height{
+    height: 200px !important;
 }
 
   
