--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -26,7 +26,7 @@ html, body{
 }
 
 
-input[type="text"]::placeholder {
+input[type="text"]::placeholder, input[type="password"]::placeholder {
   color: #888;
   font-size: small;
   font-weight: bold;
