added some classes and id

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -58,14 +58,16 @@
         <!-- Navbar Toggler Button -->
         <button
           class="navbar-toggler shadow-none"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation
+          "
+          id="navbar-toggler-btn"
         >
-          <i class="bi bi-list mobile-nav-toggle"></i>
+          <i class="bi bi-list mobile-nav-toggle" id="toggler-icon"></i>
         </button>
 
         <!-- Navbar Links -->
