--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -707,3 +707,34 @@ background-color: var(--secondary-color);
     color: #fff;
   }
 
+
+/*
+  == for smaller screen
+*/
+@media (max-width: 768px) {
+  .btn-1 {
+    /* padding-left: 2rem;
+    padding-right: 2rem; */
+    padding: 1rem 2rem;
+    font-weight: 700;
+    font-size: 12px;
+    background: var(--secondary-color) !important;
+    color: var(--primary-color-one);
+    box-shadow: #32325d40 0px 50px 100px -20px,
+                 rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, 
+                 rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+  }
+
+  .btn-outline-1{
+      padding: .8rem 2rem;
+      font-weight: 700;
+      font-size: 14px;
+      border: 2px double var(--secondary-color);
+      background: whitesmoke !important;
+      color: var(--secondary-color);
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, 
+                  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, 
+                  rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+}
