--- a/accounts/templates/account/password_reset.html
+++ b/accounts/templates/account/password_reset.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 {% load account %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
@@ -9,34 +11,23 @@
 
     
 <!-- Section: Reset Password -->
-<section class="p-0">
-    <!-- Immediate div below serves as Jumbotron -->
-    <div class="px-4 px-md-5 bg-black d-flex justify-content-center align-items-center vh-100">
-      <div class="container">
-        <div class="row m-auto text-center">
-            <h1 class="text-white fw-bold">{% trans "Password Reset" %}</h1>
-            {% if user.is_authenticated %}
-            {% include "account/snippets/already_logged_in.html" %}
-            {% endif %}
+<div class="m-auto text-center">
+    <h1 class="fw-bold">{% trans "Password Reset" %}</h1>
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
 
-            <p class="fs-6 text-white">
-                <span class="d-block">Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</span>
-            </p>
+    <p class="fs-6 text-white">
+        <span class="d-block">Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</span>
+    </p>
 
-            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-            {% csrf_token %}
-            <div class="text-white">{{ form.as_p }}</div>
-            <input class="btn btn-danger" type="submit" value="{% trans 'Reset My Password' %}" />
-            </form>
+    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    {% csrf_token %}
+    <div class="text-white">{{ form | crispy }}</div>
+    <input class="btn btn-danger" type="submit" value="{% trans 'Reset My Password' %}" />
+    </form>
 
-            <p class="text-white fst-italic pt-4">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-        </div>
-        <div class="pt-lg-5 text-center" style="color: hsl(217, 10%, 50.8%)">&copy; {% trans "Copyright" %}
-          <strong><span>Wealth Wheel Capital Investment.</span></strong><br />
-          {% trans "All Rights Reserved" %}
-        </div>
-      </div>
-    </div>
-  </section>
+    <p class="text-white fst-italic pt-4">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+</div>
   <!-- Section: Reset Password -->
 {% endblock %}
