Added padding for items

--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -93,9 +93,11 @@
           >
         </a>
         
-        {% block content %}
+        <div class="p-4">
+          {% block content %}
         
-        {% endblock content %}
+          {% endblock content %}
+        </div>
 
         <footer>
           <div class="pt-4 text-center" style="color: hsl(217, 10%, 50.8%)">&copy; {% trans "Copyright" %}
