adjustment on the flex

--- a/accounts/templates/account/signup.html
+++ b/accounts/templates/account/signup.html
@@ -8,7 +8,7 @@
 
 {% block content %}
   <form 
-    class="signup p-2 p-md-5 col-md-10 mx-auto" 
+    class="signup p-2" 
     id="signup_form" method="post" 
     enctype="multipart/form-data" 
     action="{% url 'account_signup' %}"
