--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -68,8 +68,9 @@
       <div 
         class="
           col-12 col-md-8 m-0 p-0 
-          bg-light 
+          bg-light
           d-flex flex-column align-items-center justify-content-center
+          h-100
         "
       >
         <!-- Alertify JavaScript -->
@@ -93,7 +94,7 @@
           >
         </a>
         
-        <div class="p-4">
+        <div class="p-4 flex-grow-1">
           {% block content %}
         
           {% endblock content %}
