hanged testimonial avatar images

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -41,7 +41,7 @@
             </article>
         </section>
     </div>
-</section> -->
+</section> 
 <!-- === End of the hero page ===-->
 
 <!--=== WhyChooseUs ===-->
@@ -227,7 +227,7 @@
 
                 </header>
             </article>
-        </section> -->
+        </section> 
 
         <section class="row g-5">
 
@@ -425,6 +425,7 @@
 </div>
 </section>
 
+<!-- === Testimonial Section ===-->
 <section>
     <div class="container">
         <div class="row">
@@ -440,7 +441,7 @@
     </div>
 </section>
 
-
+<!-- === Testimonial swider slide Section ===-->
 <div class="swiper myTestimonial mb-5">
     <div class="swiper-wrapper">
         <!-- Testimonial 1 -->
@@ -456,7 +457,7 @@
                 <div class="d-flex">
                     <img 
                         class="img-fluid rounded-circle" 
-                        src="{% static 'images/bg_investment.jpg' %}" 
+                        src="{% static 'images/avatar3.webp' %}" 
                         alt="profile image"
                         style="height: 70px; width: 70px;"
                     >
@@ -479,8 +480,10 @@
                 </p>
                 
                 <div class="d-flex">
-                    <img class="img-fluid rounded-circle" src="{% static 'images/bg_investment.jpg' %}" 
-                            alt="profile image" style="height: 70px; width: 70px;">
+                    <img 
+                        class="img-fluid rounded-circle" 
+                        src="{% static 'images/avatar1.webp' %}" 
+                        alt="profile image" style="height: 70px; width: 70px;">
                     <div class="ps-3">
                         <h5>Emily Chen</h5>
                         <h6>School Teacher</h6>
@@ -501,7 +504,7 @@
                 <div class="d-flex">
                     <img 
                         class="img-fluid rounded-circle" 
-                        src="{% static 'images/bg_investment.jpg' %}" 
+                        src="{% static 'images/avatar4.webp' %}" 
                         alt="profile image"
                         style="height: 70px; width: 70px;"
                     >
@@ -527,7 +530,7 @@
                 <div class="d-flex">
                     <img 
                         class="img-fluid rounded-circle" 
-                        src="{% static 'images/bg_investment.jpg' %}" 
+                        src="{% static 'images/avatar5.webp' %}" 
                         alt="profile image"
                         style="height: 70px; width: 70px;"
                     >
