--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -179,7 +179,7 @@
                   NY 535022, USA<br /><br />
                   <strong>Phone:</strong> +1 5589 55488 55<br />
                   <strong>Email:</strong>
-                  support@wealthwheelcap.com<br />
+                  support@riazvest.com<br />
                 </p>
                 <div class="social-links mt-3">
                   <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -216,7 +216,7 @@
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="{% url 'partnerships' %}">Partnerships and Loans</a>
+                  <a href="{% url 'privacy-policy' %}">Privacy Policy</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
