--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -16,14 +16,14 @@
                     </p>
                     <p>
                         <a 
-                            href="" 
+                            href="{% url 'account_signup' %}" 
                             class="btn btn-1 me-2"
                         >
                             Get Started
                         </a>
 
                         <a 
-                            href="" 
+                            href="{% url 'plans' %}" 
                             class="btn btn-outline-1">
                             Explore Plans
                         </a>
