--- a/users/templates/users/client_sidebar.html
+++ b/users/templates/users/client_sidebar.html
@@ -49,6 +49,22 @@
           Investments
       </a>
     </li>
+
+    <li class="nav-item">
+      <a 
+          class="nav-link" 
+          id="tab-investments" 
+          data-bs-toggle="pill" 
+          href="#content-markets" 
+          role="tab" 
+          aria-controls="content-markets" 
+          aria-selected="false"
+      >
+          <i class=" bi bi-graph-up-arrow"></i>
+          Market Places
+      </a>
+    </li>
+
     <li class="nav-item">
       <a 
           class="nav-link" 
