custom table styling

--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -94,6 +94,19 @@
         color: white;
       }
 
+      .custom-table th, .custom-table td {
+        vertical-align: middle;
+        text-align: center;
+      }
+      
+      .custom-table {
+          font-size: 0.9rem;
+          border-radius: 6px;
+          overflow: hidden;
+          box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      }
+    
+
     </style>
 
 </head>
