display crypto and stock prices

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -4,8 +4,13 @@
 <div class="tab-pane fade show active" id="content-dashboard" role="tabpanel" aria-labelledby="tab-home">
     {% include 'users/dashboard_tab.html' %}
 </div>
+
 <div class="tab-pane fade" id="content-investment" role="tabpanel" aria-labelledby="tab-investment">
     {% include 'users/investments_tab.html' %}
+</div>
+
+<div class="tab-pane fade" id="content-markets" role="tabpanel" aria-labelledby="tab-markets">
+    {% include 'users/market_place_tab.html' %}
 </div>
 
 <div class="tab-pane fade" id="content-withdrawals" role="tabpanel" aria-labelledby="tab-withdrawals">
