market place icon changed

--- a/users/templates/users/client_sidebar.html
+++ b/users/templates/users/client_sidebar.html
@@ -53,14 +53,14 @@
     <li class="nav-item">
       <a 
           class="nav-link" 
-          id="tab-investments" 
+          id="tab-market" 
           data-bs-toggle="pill" 
           href="#content-markets" 
           role="tab" 
           aria-controls="content-markets" 
           aria-selected="false"
       >
-          <i class=" bi bi-graph-up-arrow"></i>
+          <i class=" bi bi-currency-exchange"></i>
           Market Places
       </a>
     </li>
